src/Car2Main2CompOut.txt
Error(s):
s.cpp:24:9: error: no matching constructor for initialization of 'Car [10]'
    Car cars[10];
        ^
s.cpp:11:5: note: candidate constructor not viable: \
		requires single argument 'maxSpeed', but no arguments were provided
    Car(float maxSpeed) : maxSpeed(maxSpeed){}
    ^
s.cpp:1:7: note: candidate constructor (the implicit copy constructor) \
		not viable: requires 1 argument, but 0 were provided \
class Car {
      ^
s.cpp:1:7: note: candidate constructor (the implicit move constructor) \
	not viable: requires 1 argument, but 0 were provided \
1 error generated.